2010-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* uielement.cpp (ElementAdded): Always propagate inherited
	values. Partial fix for drt 245.

	* provider.cpp (InheritedPropertyValueProvider::GetPropertyValue):
	Removed some unnecessary branching.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: When marshalling events to the main thread, only do one
	event emission per tick call. This fixes a tick call ordering issue where
	an early event emission would also cause later events to be emitted since
	they'd get accumulated before the tick call was executed - which is
	problematic if the Surface' loaded event's tick call was added in between
	those event emissions, causing MediaElements to emit events before the
	Surface' Loaded event had been raised. Fixes a regression with
	our media test #113.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Rename HttpRequestNode to something else, since there
	already is a HttpRequestNode in deployment.cpp.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h: MmsSource: don't touch http requests on the media thread.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ProgressiveSource::Dispose: Use the new Resurrect method to
	prevent a warning when reffing ourselves.

	* dependencyobject.cpp|h: Add a Resurrect method that refs without showing a
	warning if the refcount is 0.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Send: Don't do anything if we're completed already (this will
	happen if Open failed due to policy validations for instance).

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Fix typo in comment.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: Make sure we don't return a random value at the
	  end of the function and make the 'else' a g_warning instead.

2010-05-24  Jeffrey Stedfast  <fejj@novell.com>
