@@ -1,3 +1,7 @@
+2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* network-curl.cpp|h: Implement a couple of TODOs I'd missed.
+
 2010-05-25  Jeffrey Stedfast  <fejj@novell.com>
 
 	* uielement.cpp (ElementAdded): Always propagate inherited
